# snug-human-resources

./: ATTENDANCE_PAYROLL_IMPLEMENTATION_SPEC.md  README.md  pyproject.toml  requirements.txt
snrg_hr/: hooks.py  setup.py  tasks.py
snrg_hr/api/: attendance_correction.py  attendance_notifications.py  attendance_upload.py  payroll_control.py
snrg_hr/fixtures/: custom_field.json
snrg_hr/human_resources/doctype/attendance_control_settings/: attendance_control_settings.js  attendance_control_settings.json  attendance_control_settings.py
snrg_hr/human_resources/doctype/attendance_correction_request/: attendance_correction_request.js  attendance_correction_request.json  attendance_correction_request.py
snrg_hr/human_resources/doctype/attendance_import_batch/: attendance_import_batch.js  attendance_import_batch.json  attendance_import_batch.py
snrg_hr/human_resources/doctype/attendance_violation_log/: attendance_violation_log.js  attendance_violation_log.json  attendance_violation_log.py
snrg_hr/human_resources/page/attendance_upload_control/: attendance_upload_control.html  attendance_upload_control.js  attendance_upload_control.json  attendance_upload_control.py
snrg_hr/human_resources/report/manager_team_attendance/: manager_team_attendance.js  manager_team_attendance.json  manager_team_attendance.py
snrg_hr/services/: attendance_batch_processor.py  attendance_correction_service.py  attendance_import_preview.py  attendance_notification_service.py  attendance_policy_engine.py  payroll_control_service.py  team_hierarchy.py
(+4 files in other folders)
